crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLC0131_type_bivariance.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
---
type_bivariance.py:5:1: PLC0131 Type variance cannot be both covariant and contravariant
  |
3 | # Errors.
4 | 
5 | T = TypeVar("T", covariant=True, contravariant=True)
  | ^ PLC0131
6 | T = TypeVar(name="T", covariant=True, contravariant=True)
  |

type_bivariance.py:6:1: PLC0131 Type variance cannot be both covariant and contravariant
  |
5 | T = TypeVar("T", covariant=True, contravariant=True)
6 | T = TypeVar(name="T", covariant=True, contravariant=True)
  | ^ PLC0131
7 | 
8 | T = ParamSpec("T", covariant=True, contravariant=True)
  |

type_bivariance.py:8:1: PLC0131 Type variance cannot be both covariant and contravariant
  |
6 | T = TypeVar(name="T", covariant=True, contravariant=True)
7 | 
8 | T = ParamSpec("T", covariant=True, contravariant=True)
  | ^ PLC0131
9 | T = ParamSpec(name="T", covariant=True, contravariant=True)
  |

type_bivariance.py:9:1: PLC0131 Type variance cannot be both covariant and contravariant
   |
 8 | T = ParamSpec("T", covariant=True, contravariant=True)
 9 | T = ParamSpec(name="T", covariant=True, contravariant=True)
   | ^ PLC0131
10 | 
11 | # Non-errors.
   |


