crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLC0208_iterate_over_set.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
---
iterate_over_set.py:8:13: PLC0208 Use a sequence type when iterating over values
   |
 8 | # True positives.
 9 | 
10 | for item in {"apples", "lemons", "water"}:  # flags in-line set literals
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PLC0208
11 |     print(f"I like {item}.")
   |

iterate_over_set.py:11:13: PLC0208 Use a sequence type when iterating over values
   |
11 |     print(f"I like {item}.")
12 | 
13 | for item in set("apples", "lemons", "water"):  # flags set() calls
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PLC0208
14 |     print(f"I like {item}.")
   |

iterate_over_set.py:14:15: PLC0208 Use a sequence type when iterating over values
   |
14 |     print(f"I like {item}.")
15 | 
16 | for number in {i for i in range(10)}:  # flags set comprehensions
   |               ^^^^^^^^^^^^^^^^^^^^^^ PLC0208
17 |     print(number)
   |

iterate_over_set.py:17:28: PLC0208 Use a sequence type when iterating over values
   |
17 |     print(number)
18 | 
19 | numbers_list = [i for i in {1, 2, 3}]  # flags sets in list comprehensions
   |                            ^^^^^^^^^ PLC0208
20 | 
21 | numbers_set = {i for i in {1, 2, 3}}  # flags sets in set comprehensions
   |

iterate_over_set.py:19:27: PLC0208 Use a sequence type when iterating over values
   |
19 | numbers_list = [i for i in {1, 2, 3}]  # flags sets in list comprehensions
20 | 
21 | numbers_set = {i for i in {1, 2, 3}}  # flags sets in set comprehensions
   |                           ^^^^^^^^^ PLC0208
22 | 
23 | numbers_dict = {str(i): i for i in {1, 2, 3}}  # flags sets in dict comprehensions
   |

iterate_over_set.py:21:36: PLC0208 Use a sequence type when iterating over values
   |
21 | numbers_set = {i for i in {1, 2, 3}}  # flags sets in set comprehensions
22 | 
23 | numbers_dict = {str(i): i for i in {1, 2, 3}}  # flags sets in dict comprehensions
   |                                    ^^^^^^^^^ PLC0208
24 | 
25 | numbers_gen = (i for i in {1, 2, 3})  # flags sets in generator expressions
   |

iterate_over_set.py:23:27: PLC0208 Use a sequence type when iterating over values
   |
23 | numbers_dict = {str(i): i for i in {1, 2, 3}}  # flags sets in dict comprehensions
24 | 
25 | numbers_gen = (i for i in {1, 2, 3})  # flags sets in generator expressions
   |                           ^^^^^^^^^ PLC0208
26 | 
27 | # True negatives.
   |


