crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLC0414_import_aliasing.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
expression: diagnostics
---
- - kind:
      name: UselessImportAlias
      body: Import alias does not rename original package
      suggestion: Remove import alias
      fixable: true
    location:
      row: 6
      column: 7
    end_location:
      row: 6
      column: 33
    fix:
      content: collections
      location:
        row: 6
        column: 7
      end_location:
        row: 6
        column: 33
    parent: ~
  - kind:
      name: UselessImportAlias
      body: Import alias does not rename original package
      suggestion: Remove import alias
      fixable: true
    location:
      row: 7
      column: 24
    end_location:
      row: 7
      column: 50
    fix:
      content: OrderedDict
      location:
        row: 7
        column: 24
      end_location:
        row: 7
        column: 50
    parent: ~
  - kind:
      name: UselessImportAlias
      body: Import alias does not rename original package
      suggestion: Remove import alias
      fixable: true
    location:
      row: 16
      column: 14
    end_location:
      row: 16
      column: 24
    fix:
      content: bar
      location:
        row: 16
        column: 14
      end_location:
        row: 16
        column: 24
    parent: ~
  - kind:
      name: UselessImportAlias
      body: Import alias does not rename original package
      suggestion: Remove import alias
      fixable: true
    location:
      row: 19
      column: 18
    end_location:
      row: 19
      column: 28
    fix:
      content: bar
      location:
        row: 19
        column: 18
      end_location:
        row: 19
        column: 28
    parent: ~
  - kind:
      name: UselessImportAlias
      body: Import alias does not rename original package
      suggestion: Remove import alias
      fixable: true
    location:
      row: 20
      column: 22
    end_location:
      row: 20
      column: 38
    fix:
      content: foobar
      location:
        row: 20
        column: 22
      end_location:
        row: 20
        column: 38
    parent: ~
  - kind:
      name: UselessImportAlias
      body: Import alias does not rename original package
      suggestion: Remove import alias
      fixable: true
    location:
      row: 22
      column: 14
    end_location:
      row: 22
      column: 24
    fix:
      content: foo
      location:
        row: 22
        column: 14
      end_location:
        row: 22
        column: 24
    parent: ~
  - kind:
      name: UselessImportAlias
      body: Import alias does not rename original package
      suggestion: Remove import alias
      fixable: true
    location:
      row: 23
      column: 26
    end_location:
      row: 23
      column: 38
    fix:
      content: foo2
      location:
        row: 23
        column: 26
      end_location:
        row: 23
        column: 38
    parent: ~
  - kind:
      name: UselessImportAlias
      body: Import alias does not rename original package
      suggestion: Remove import alias
      fixable: true
    location:
      row: 25
      column: 20
    end_location:
      row: 25
      column: 36
    fix:
      content: foobar
      location:
        row: 25
        column: 20
      end_location:
        row: 25
        column: 36
    parent: ~

