crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLC1901_compare_to_empty_string.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    CompareToEmptyString: ~
  location:
    row: 4
    column: 3
  end_location:
    row: 4
    column: 4
  fix: ~
  parent: ~
- kind:
    CompareToEmptyString: ~
  location:
    row: 7
    column: 3
  end_location:
    row: 7
    column: 4
  fix: ~
  parent: ~

