crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLC3002_unnecessary_direct_lambda_call.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
---
./resources/test/fixtures/pylint/unnecessary_direct_lambda_call.py:4:5: PLC3002 Lambda expression called directly. Execute the expression inline instead.
  |
4 | # pylint: disable=undefined-variable, line-too-long
5 | 
6 | y = (lambda x: x**2 + 2*x + 1)(a)  # [unnecessary-direct-lambda-call]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PLC3002
7 | y = max((lambda x: x**2)(a), (lambda x: x+1)(a))  # [unnecessary-direct-lambda-call,unnecessary-direct-lambda-call]
  |

./resources/test/fixtures/pylint/unnecessary_direct_lambda_call.py:5:9: PLC3002 Lambda expression called directly. Execute the expression inline instead.
  |
5 | y = (lambda x: x**2 + 2*x + 1)(a)  # [unnecessary-direct-lambda-call]
6 | y = max((lambda x: x**2)(a), (lambda x: x+1)(a))  # [unnecessary-direct-lambda-call,unnecessary-direct-lambda-call]
  |         ^^^^^^^^^^^^^^^^^^^ PLC3002
  |

./resources/test/fixtures/pylint/unnecessary_direct_lambda_call.py:5:30: PLC3002 Lambda expression called directly. Execute the expression inline instead.
  |
5 | y = (lambda x: x**2 + 2*x + 1)(a)  # [unnecessary-direct-lambda-call]
6 | y = max((lambda x: x**2)(a), (lambda x: x+1)(a))  # [unnecessary-direct-lambda-call,unnecessary-direct-lambda-call]
  |                              ^^^^^^^^^^^^^^^^^^ PLC3002
  |


