crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLE0100_init_is_generator.py.snap
---
source: src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    InitIsGenerator: ~
  location:
    row: 9
    column: 8
  end_location:
    row: 9
    column: 13
  fix: ~
  parent: ~
- kind:
    InitIsGenerator: ~
  location:
    row: 14
    column: 8
  end_location:
    row: 14
    column: 29
  fix: ~
  parent: ~

