crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLE0100_yield_in_init.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
expression: diagnostics
---
- - kind:
      name: YieldInInit
      body: "`__init__` method is a generator"
      suggestion: ~
      fixable: false
    location:
      row: 9
      column: 8
    end_location:
      row: 9
      column: 13
    fix: ~
    parent: ~
  - kind:
      name: YieldInInit
      body: "`__init__` method is a generator"
      suggestion: ~
      fixable: false
    location:
      row: 14
      column: 8
    end_location:
      row: 14
      column: 29
    fix: ~
    parent: ~

