crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLE0101_return_in_init.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
expression: diagnostics
---
- - kind:
      name: ReturnInInit
      body: "Explicit return in `__init__`"
      suggestion: ~
      fixable: false
    location:
      row: 14
      column: 8
    end_location:
      row: 14
      column: 16
    fix: ~
    parent: ~
  - kind:
      name: ReturnInInit
      body: "Explicit return in `__init__`"
      suggestion: ~
      fixable: false
    location:
      row: 22
      column: 8
    end_location:
      row: 22
      column: 16
    fix: ~
    parent: ~

